# zbd_battlemetrics_discord_bot

./: .gitignore  Cargo.toml  README.md  shuttle.toml
src/: battlemetrics.rs  commands.rs  main.rs
