[package]
name = "blood"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.5.2"
shuttle-poise = "0.27.0"
shuttle-runtime = "0.27.0"
shuttle-secrets = "0.27.0"
tracing = "0.1.37"
tokio = "1.26.0"
qrcode-generator = "4.1.9"
zebedee-rust = "0.4.4"
serde_json = "1.0.105"
reqwest = "0.11.20"
serde = { version = "1.0", features = ["derive"] }
