[package]
name = "blood"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.83"
poise = "0.6.1"
shuttle-serenity = "0.44.0"
shuttle-runtime = "0.44.0"
tracing = "0.1.40"
tokio = "1.37.0"
qrcode-generator = "4.1.9"
zebedee-rust = "0.8.0"
serde_json = "1.0.117"
reqwest = "0.12.4"
serde = { version = "1.0.201", features = ["derive"] }
